fix unnecessary scrolling on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -67,12 +67,18 @@
 
   html {
     font-family: 'Work Sans', system-ui, -apple-system, sans-serif;
+    touch-action: manipulation;
+  }
+
+  input, select, textarea {
+    font-size: 16px;
   }
 
   body {
     @apply bg-background text-foreground;
     font-weight: 300;
     line-height: 1.8;
+    height: 100dvh
   }
 
   h1, h2, h3, h4, h5, h6 {
